# frida-magisk

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md
.github/workflows/: build-antidetect.yml  build.yml
module/: README.md  action.sh  customize.sh  module.prop  service.sh  uninstall.sh
module/native/zygisk/: CMakeLists.txt
module/native/zygisk/src/: injector.cpp
module/webroot/: app.js  index.html  style.css
patches/antidetect/: README.md
scripts/: build-all.sh  build-module.sh  build-zygisk-injector.sh  fetch-frida-assets.sh  prepare-antidetect-assets.sh  verify-antidetect-package.sh
scripts/frida/: antidetect-baseline.js
skills/frida-magisk-antidetect/: SKILL.md
